--- a/jmercury.client/src/main/java/org/maxsys/jmercury/client/todo
+++ b/jmercury.client/src/main/java/org/maxsys/jmercury/client/todo
@@ -1,5 +1,5 @@
 + Сортировка с учетом нулей (1 2 3 04 05 12 15 21).
 + Refresh месяцев перед выводом отчета за текущий месяц.
-- Автообновление
-- Форма отчета
++ Автообновление
++ Форма отчета
 - Отсечки
