--- a/jmercury.client/src/main/java/org/maxsys/jmercury/client/todo
+++ b/jmercury.client/src/main/java/org/maxsys/jmercury/client/todo
@@ -2,4 +2,6 @@
 + Refresh месяцев перед выводом отчета за текущий месяц.
 + Автообновление
 + Форма отчета
-- Отсечки
++ Переименование групп
++ Отсечки
+- Отсечки на графике
