--- a/jmercury.client/src/main/java/org/maxsys/jmercury/client/todo
+++ b/jmercury.client/src/main/java/org/maxsys/jmercury/client/todo
@@ -4,4 +4,5 @@
 + Форма отчета
 + Переименование групп
 + Отсечки
-- Отсечки на графике
+- Отметки на графике
+- "Обновить" при необходимости должно обновлять инфу со счетчика
