--- a/jmercury.client/src/main/java/org/maxsys/jmercury/client/todo
+++ b/jmercury.client/src/main/java/org/maxsys/jmercury/client/todo
@@ -4,5 +4,7 @@
 + Форма отчета
 + Переименование групп
 + Отсечки
-- Отметки на графике
++ Отметки на графике
 - "Обновить" при необходимости должно обновлять инфу со счетчика
+- Отчет за сутки
+- В отчете за месяц: если месяц текущий, то заменить фразу "на 24 ч последнего дня"
