--- a/jmercury.client/src/main/java/org/maxsys/jmercury/client/todo
+++ b/jmercury.client/src/main/java/org/maxsys/jmercury/client/todo
@@ -6,5 +6,5 @@
 + Отсечки
 + Отметки на графике
 - "Обновить" при необходимости должно обновлять инфу со счетчика
-- Отчет за сутки
-- В отчете за месяц: если месяц текущий, то заменить фразу "на 24 ч последнего дня"
++ Отчет за сутки
++ В отчете за месяц: если месяц текущий, то *
