--- a/jmercury.client/src/main/java/org/maxsys/jmercury/client/todo
+++ b/jmercury.client/src/main/java/org/maxsys/jmercury/client/todo
@@ -8,4 +8,4 @@
 + Отчет за сутки
 + В отчете за месяц: если месяц текущий, то *
 - "Обновить" при необходимости должно обновлять инфу со счетчика
-- Отчет за сутки по конкретному объекту (или нескольким)
++ Отчет за сутки по конкретному объекту (или нескольким)
